--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,12 @@
         "mews/captcha": "dev-master",
         "rtconner/laravel-tagging": "dev-master",
         
-        "lavalite/cms": "dev-master"
+        "lavalite/core": "dev-master",
+        "lavalite/file": "dev-master",
+        "lavalite/menu": "dev-master",
+        "lavalite/translatable": "dev-master",
+        "lavalite/page": "dev-master",
+        "lavalite/image": "dev-master"
     },
 
     "autoload": {
