--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,3 @@
-
 {
   "name": "LavaLite",
   "version": "1.2.0",
@@ -23,6 +22,7 @@
     "bootswatch":"*",
     "summernote":"*",
     "underscore":"*",
-    "bootstrap-arabic":"*"
+    "bootstrap-arabic":"*",
+    "bootstrap-tagsinput":"*"
     }
 }
