--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,3 @@
-
 {
   "name": "LavaLite",
   "version": "1.2.0",
@@ -24,8 +23,6 @@
     "summernote":"*",
     "underscore":"*",
     "bootstrap-arabic":"*",
-    "ihover":"*",
-    "CaptionHoverEffects":"*",
-    "selectize":"*"
+    "bootstrap-tagsinput":"*"
     }
 }
