--- a/bower.json
+++ b/bower.json
@@ -1,3 +1,4 @@
+
 {
   "name": "LavaLite",
   "version": "1.2.0",
@@ -23,6 +24,8 @@
     "summernote":"*",
     "underscore":"*",
     "bootstrap-arabic":"*",
-    "bootstrap-tagsinput":"*"
+    "ihover":"*",
+    "CaptionHoverEffects":"*",
+    "selectize":"*"
     }
 }
