--- a/composer.json
+++ b/composer.json
@@ -8,32 +8,19 @@
         "anahkiasen/former": "dev-master",
         "teepluss/theme": "dev-master",
         "intervention/imagecache": "dev-master",
-        "venturecraft/revisionable": "dev-master",
         "philf/setting": "dev-master",
         "mcamara/laravel-localization": "0.13.*",
         "nwidart/db-exporter": "dev-master",
-<<<<<<< HEAD
         "dimsav/laravel-translatable": "3.*",
         "greggilbert/recaptcha": "dev-master",
         "loic-sharma/profiler": "1.1.*",
-        "anouar/paypalpayment": "dev-master",
-        "lavalite/page": "dev-master",
-        "lavalite/user": "dev-master",
-        "lavalite/menu": "dev-master"
-=======
 
-        "cviebrock/eloquent-sluggable": "dev-master",
-        "mews/captcha": "dev-master",
-        "rtconner/laravel-tagging": "dev-master",
-        
-        "lavalite/core": "v1.1",
-        "lavalite/file": "v1.1",
-        "lavalite/menu": "v1.1",
-        "lavalite/translatable": "v1.1",
-        "lavalite/page": "v1.1",
-        "lavalite/image": "v1.1"
-       
->>>>>>> FETCH_HEAD
+        "lavalite/user": "2.*",
+        "lavalite/page": "2.*",
+        "lavalite/menu": "2.*",
+        "lavalite/filer": "2.*",
+        "lavalite/image": "2.*"
+
     },
 
     "autoload": {
@@ -41,7 +28,6 @@
             "app/commands",
             "app/controllers",
             "app/models",
-            "workbench",
             "app/database/migrations",
             "app/database/seeds",
             "app/tests/TestCase.php"
@@ -65,5 +51,5 @@
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
