--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "LavaLite",
-  "version": "1.2.0",
+  "version": "2.0",
   "main": "",
   "ignore": [
   ".jshintrc",
@@ -23,18 +23,11 @@
     "summernote":"*",
     "underscore":"*",
     "bootstrap-arabic":"*",
-<<<<<<< HEAD
     "ihover":"*",
     "CaptionHoverEffects":"*",
-<<<<<<< HEAD
-    "selectize":"*"
-=======
     "selectize":"*",
     "nivo-slider":"*",
-    "yamm3":"*"
->>>>>>> dev
-=======
+    "yamm3":"*",
     "bootstrap-tagsinput":"*"
->>>>>>> FETCH_HEAD
     }
 }
