--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
         "greggilbert/recaptcha": "dev-master",
         "loic-sharma/profiler": "1.1.*",
         "anouar/paypalpayment": "dev-master",
-        "lavalite/user": "dev-master",
-        "lavalite/page": "dev-master",
-        "lavalite/menu": "dev-master",
-        "lavalite/filer": "dev-master",
-        "lavalite/image": "dev-master"
+
+        "lavalite/user": "2.*",
+        "lavalite/page": "2.*",
+        "lavalite/menu": "2.*",
+        "lavalite/filer": "2.*",
+        "lavalite/image": "2.*"
     },
 
     "autoload": {
