Updates to upload

--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,13 @@
 /workbench
 /public/vendor
 /public/packages
+/public/themes/admin-lavalite
+/public/themes/public-lavalite
 composer.json
 composer.phar
 composer.lock
 .DS_Store
 ._**
-public/themes/admin/assets/image/defa.png
-
-app/storage/geo/GeoLite2-City.mmdb
-
 *.tmp
-
 *.zip
+app/storage/geo/GeoLite2-City.mmdb
