--- a/bower.json
+++ b/bower.json
@@ -8,34 +8,46 @@
   ],
   "dependencies": {
     "animate.css":"v3.1.*",
-    "bootstrap": "3.1.*",
+    "appear":"*",
     "bootstrap":"*",
     "bootstrap-arabic":"*",
     "bootstrap-daterangepicker":"*",
     "bootstrap-datetimepicker": "*",
     "bootstrap-switch": "v2.0.*",
     "bootstrap-tagsinput":"*",
-    "bootstrap-wysihtml5":"*",
-    "bootswatch":"*",
+    "superslides":"*",
     "CaptionHoverEffects":"*",
     "chartjs":"*",
     "chosen":"v1.1.*",
     "dropzone":"v3.8.*",
     "ezdz":"*",
+    "fitvids":"*",
     "font-awesome":"*",
     "fullcalendar":"*",
+    "holderjs":"*",
     "ihover":"*",
     "iCheck":"*",
     "ionicons":"*",
+    "isotope":"*",
     "jquery": "2.1.*",
     "jquery.ui":"*",
+    "jquery-backstretch":"*",
+    "jquery-cookie":"*",
+    "jquery-easing-original":"*",
+    "jquery-knob":"*",
     "jvectormap":"*",
     "jquery-knob":"*",
+    "magnific-popup":"*",
+    "mediaelement":"*",
     "modernizr":"*",
+    "masonry":"*",
     "morrisjs":"*",
     "nivo-slider":"*",
+    "owl-carousel":"*",
     "selectize":"*",
+    "stellar":"*",
     "summernote":"*",
+    "superslides":"*",
     "underscore":"*",
     "yamm3":"*"
     }
