--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "lavalite/cms",
     "description": "Multilingual CMS based on Laravel 4 & Bootstrap 3",
     "keywords": ["lavalite", "framework", "cms", "laravel"],
+    "license": "MIT",
     "require": {
         "laravel/framework": "4.2.*",
         "cartalyst/sentry": "dev-master",
@@ -9,19 +10,14 @@
         "teepluss/theme": "dev-master",
         "intervention/imagecache": "dev-master",
         "philf/setting": "dev-master",
-        "mcamara/laravel-localization": "0.13.*",
+        "mcamara/laravel-localization": "0.14.*",
         "nwidart/db-exporter": "dev-master",
-        "dimsav/laravel-translatable": "3.*",
+        "dimsav/laravel-translatable": "4.2.*",
         "greggilbert/recaptcha": "dev-master",
         "loic-sharma/profiler": "1.1.*",
         "thomaswelton/laravel-gravatar": "0.0.x",
         "weboap/visitor": "dev-master",
-
-        "lavalite/user": "dev-master",
-        "lavalite/page": "dev-master",
-        "lavalite/menu": "dev-master",
-        "lavalite/filer": "dev-master",
-        "lavalite/image": "dev-master"
+        "dinesh/barcode": "dev-master"
 
     },
 
@@ -30,7 +26,6 @@
             "app/commands",
             "app/controllers",
             "app/models",
-            "workbench",
             "app/database/migrations",
             "app/database/seeds",
             "app/tests/TestCase.php"
