--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,13 @@
         "mcamara/laravel-localization": "0.14.*",
         "dimsav/laravel-translatable": "4.2.*",
         "greggilbert/recaptcha": "dev-master",
-        "loic-sharma/profiler": "1.1.*"
+        "loic-sharma/profiler": "1.1.*",
+
+        "lavalite/user": "dev-master",
+        "lavalite/page": "dev-master",
+        "lavalite/menu": "dev-master",
+        "lavalite/filer": "dev-master",
+        "lavalite/image": "dev-master"
     },
 
     "autoload": {
