--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "lavalite/contact": "dev-master",
         "lavalite/menu": "dev-master",
         "lavalite/filer": "dev-master",
-        "lavalite/image": "dev-master",
+        "lavalite/image": "dev-master"
 
     },
 
@@ -30,9 +30,7 @@
             "app/models",
             "app/database/migrations",
             "app/database/seeds",
-            "app/tests/TestCase.php",
-
-            "workbench"
+            "app/tests/TestCase.php"
         ]
     },
 
