--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
         "greggilbert/recaptcha": "dev-master",
         "loic-sharma/profiler": "1.1.*",
 
-        "lavalite/user": "dev-master",
-        "lavalite/page": "dev-master",
-        "lavalite/contact": "dev-master",
-        "lavalite/menu": "dev-master",
-        "lavalite/filer": "dev-master",
-        "lavalite/image": "dev-master"
+        "lavalite/user": "2.2.*",
+        "lavalite/page": "2.2.*",
+        "lavalite/contact": "2.2.*",
+        "lavalite/menu": "2.2.*",
+        "lavalite/filer": "2.2.*",
+        "lavalite/image": "2.2.*"
 
     },
 
