Updated theme and login functionality

--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ APP_KEY=ZwejUDzRnxrCzD1yImkuxeHcqRnOjuAQ
 
 DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=lavalite_cms5
+DB_USERNAME=root
+DB_PASSWORD=renfos
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -15,6 +15,8 @@ QUEUE_DRIVER=sync
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=422281101ae0133eb
+MAIL_PASSWORD=59580381f6c175
 MAIL_ENCRYPTION=null
+MAIL_ADDRESS=from@exampe.com
+MAIL_NAME=Example
