--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
+DB_CONNECTION=sqlite
 DB_HOST=localhost
 DB_DATABASE=homestead
 DB_USERNAME=homestead
@@ -17,3 +18,5 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_ADDRESS=null
+MAIL_NAME=null
