--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=ZwejUDzRnxrCzD1yImkuxeHcqRnOjuAQ
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_DATABASE=lavalite_cms5
 DB_USERNAME=root
