Composer update - 5.2.23 generate error with former.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "cms",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "laravel/framework": "5.2.22",
         "lavalite/framework": "dev-master",
         "lavalite/page": "dev-master",
         "lavalite/settings": "dev-master",
