--- a/.env.example
+++ b/.env.example
@@ -20,18 +20,21 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_ADDRESS=null
 
-TWITTER_CLIENT_ID=
-TWITTER_CLIENT_SECRET=
-TWITTER_CALLBACK_URL=
+TWITTER_CLIENT_ID=null
+TWITTER_CLIENT_SECRET=null
+TWITTER_CALLBACK_URL=null
 
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
-FACEBOOK_CALLBACK_URL=
+FACEBOOK_CLIENT_ID=null
+FACEBOOK_CLIENT_SECRET=null
+FACEBOOK_CALLBACK_URL=null
 
-GOOGLEPLUS_CLIENT_ID=
-GOOGLEPLUS_CLIENT_SECRET=
-GOOGLEPLUS_CALLBACK_URL=
+GOOGLEPLUS_CLIENT_ID=null
+GOOGLEPLUS_CLIENT_SECRET=null
+GOOGLEPLUS_CALLBACK_URL=null
 
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
-LINKEDIN_CALLBACK_URL=
+LINKEDIN_CLIENT_ID=null
+LINKEDIN_CLIENT_SECRET=null
+LINKEDIN_CALLBACK_URL=null
+
+RECAPTCHA_PUBLIC_KEY=null
+RECAPTCHA_PRIVATE_KEY=null
