--- a/composer.json
+++ b/composer.json
@@ -7,25 +7,25 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "lavalite/framework": "dev-master",
-        "lavalite/page": "dev-master",
-        "lavalite/settings": "dev-master",
-        "lavalite/task": "dev-master",
-        "lavalite/message": "dev-master",
-        "lavalite/calendar": "dev-master",
+        "lavalite/framework": "1.3.*",
+        "lavalite/page": "4.2.*",
+        "lavalite/settings": "4.2.*",
+        "lavalite/task": "4.2.*",
+        "lavalite/message": "4.2.*",
+        "lavalite/calendar": "4.2.*",
 
-        "litecms/news": "dev-master",
-        "litecms/testimonial": "dev-master",
-        "litecms/blog": "dev-master",
-        "litecms/gallery": "dev-master",
-        "litecms/forum": "dev-master",
-        "litecms/team": "dev-master",
-        "litecms/block": "dev-master",
-        "litecms/contact": "dev-master",
-        "litecms/portfolio": "dev-master",
-        "litecms/faq": "dev-master",
-        "litecms/career": "dev-master",
-        "litecms/pricelist": "dev-master"
+        "litecms/news": "1.0.*",
+        "litecms/testimonial": "1.0.*",
+        "litecms/blog": "1.0.*",
+        "litecms/gallery": "1.0.*",
+        "litecms/forum": "1.0.*",
+        "litecms/team": "1.0.*",
+        "litecms/block": "1.0.*",
+        "litecms/contact": "1.0.*",
+        "litecms/portfolio": "1.0.*",
+        "litecms/faq": "1.0.*",
+        "litecms/career": "1.0.*",
+        "litecms/pricelist": "1.0.*"
 
     },
     "require-dev": {
