--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "lavalite/framework": "2.0.*",
+        "lavalite/framework": "2.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
