--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
             "tests/TestCase.php"
         ]
     },
+    "minimum-stability" : "dev", 
     "scripts": {
         "post-root-package-install": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -48,6 +49,6 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dev"
     }
 }
