--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,8 @@
     },
     "minimum-stability" : "dev", 
     "scripts": {
-        "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
         "post-create-project-cmd": [
+            "php artisan lavalite:install"
             "php artisan key:generate"
         ],
         "post-install-cmd": [
