--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,13 @@
     "type": "cms",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
-        "lavalite/framework": "2.0.*"
+        "laravel/framework": "5.4.*",
+        "lavalite/framework": "2.1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
-        "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "phpunit/phpunit": "~5.0"
     },
     "autoload": {
         "classmap": [
