--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,11 @@
         ]
     },
     "scripts": {
+        "post-root-package-install": [
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
         "post-create-project-cmd": [
-
+            "php artisan key:generate"
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
@@ -43,6 +46,7 @@
         ]
     },
     "config": {
-        "preferred-install": "dev"
+        "preferred-install": "dist",
+        "sort-packages": true
     }
 }
