--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ php:
   - 7.0
 
 before_script:
-  - mkdir bootstrap/cache
-  - mkdir storage
-  - mkdir storage/app
-  - mkdir storage/framework
-  - mkdir storage/framework/sessions
-  - mkdir storage/framework/cache
-  - mkdir storage/framework/views
+ # - mkdir bootstrap/cache
+  #- mkdir storage
+  #- mkdir storage/app
+  #- mkdir storage/framework
+  #- mkdir storage/framework/sessions
+  #- mkdir storage/framework/cache
+  #- mkdir storage/framework/views
   - chmod 777 -R storage
+  - chmod 777 -R bootstrap/cache
   #- chown -R www-data:www-data storage
   - cp .env.travis .env
   - mysql -e 'create database homestead_test;'
