--- a/.env.travis
+++ b/.env.travis
@@ -5,6 +5,7 @@ APP_KEY=SomeRandomString
 DB_CONNECTION=mysql
 DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
+DB_DATABASE=homestead_test
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
