--- a/.env.travis
+++ b/.env.travis
@@ -3,9 +3,9 @@ APP_ENV=testing
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=mysql
-DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=
-DB_DATABASE=homestead_test
+DB_USERNAME=root
+DB_PASSWORD=
+DB_DATABASE=test
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
