--- a/.env.travis
+++ b/.env.travis
@@ -5,7 +5,7 @@ APP_KEY=SomeRandomString
 DB_CONNECTION=mysql
 DB_USERNAME=root
 DB_PASSWORD=
-DB_DATABASE=test
+DB_DATABASE=homestead_test
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
