--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,12 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "lavalite/framework": "2.1.*"
+        "lavalite/framework": "2.1.*",
+        "lavalite/theme" : "dev-master",
+        "litecms/contact": "dev-master",
+        "litecms/block": "dev-master",
+        "litecms/page": "dev-master",
+        "composer/installers": "1.0.*@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -27,6 +32,12 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "installer-paths": {
+            "packages/{$vendor}/{$name}": ["type:lavalite-package"],
+            "public/themes": ["lavalite/theme"]
         }
     },
     "scripts": {
