--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "lavalite/framework": "dev-master",
-        "lavalite/theme" : "dev-master",
-        "litecms/contact": "dev-master",
-        "litecms/block": "dev-master",
-        "litecms/page": "dev-master",
+        "lavalite/framework": "2.2.*",
+        "lavalite/theme" : "2.0.*",
+        "litecms/contact": "2.0.*",
+        "litecms/block": "2.0.*",
+        "litecms/page": "2.0.*",
         "composer/installers": "1.0.*@dev"
     },
     "require-dev": {
