--- a/composer.json
+++ b/composer.json
@@ -41,11 +41,8 @@
         }
     },
     "scripts": {
-        "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "php artisan lavalite:install --verbose"
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
