--- a/package.json
+++ b/package.json
@@ -1,18 +1,63 @@
 {
   "private": true,
   "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
+    "admin-lte": "^2.3.11",
+    "axios": "^0.15.3",
+    "bootstrap-daterangepicker": "^2.1.25",
+    "bootstrap-material-design": "^0.5.10",
     "bootstrap-sass": "^3.3.7",
-    "gulp": "^3.9.1",
-    "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-9",
-    "laravel-elixir-vue": "^0.1.4",
-    "laravel-elixir-webpack-official": "^1.0.2",
-    "lodash": "^4.14.0",
-    "vue": "^1.0.26",
-    "vue-resource": "^0.9.3"
+    "bootstrap-select": "^1.12.4",
+    "bootstrap-switch": "^3.3.4",
+    "codemirror": "^5.30.0",
+    "components-jqueryui": "^1.12.1",
+    "cropper": "^2.1.0",
+    "cross-env": "^3.2.4",
+    "datatables.net": "1.10.15",
+    "datatables.net-bs": "1.10.15",
+    "datatables.net-dt": "1.10.15",
+    "datatables.net-responsive": "^2.1.1",
+    "datatables.net-responsive-bs": "^2.1.1",
+    "dropzone": "^5.1.1",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "fullcalendar": "^3.4.0",
+    "icheck": "^1.0.2",
+    "ionicons": "^3.0.0",
+    "jquery": "^2.2.4",
+    "jquery-slimscroll": "^1.3.8",
+    "jquery-ui": "github:jquery/jquery-ui#1.12.1",
+    "jquery-ui-dist": "^1.12.1",
+    "jquery-validation": "^1.17.0",
+    "jstree": "^3.3.4",
+    "laravel-mix": "^0.12.1",
+    "lodash": "^4.17.4",
+    "material-icons": "^0.1.0",
+    "materialize-css": "^0.100.2",
+    "mz": "^2.6.0",
+    "nestable": "^0.2.0",
+    "normalize.css": "^7.0.0",
+    "pixeden-stroke-7-icon": "^1.2.3",
+    "readline": "^1.3.0",
+    "selectize": "^0.12.4",
+    "simple-line-icons": "^2.4.1",
+    "sortable": "^2.0.0",
+    "sortablejs": "^1.6.1",
+    "summernote": "^0.8.8",
+    "sweetalert": "^1.1.3",
+    "timeago": "^1.6.1",
+    "toastr": "^2.1.2",
+    "vue": "^2.4.2",
+    "waves": "^0.1.1"
   }
 }
