updated laravel mix packages

--- a/package.json
+++ b/package.json
@@ -2,65 +2,73 @@
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=resources/assets/js/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=resources/assets/js/webpack.config.js",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=resources/assets/js/webpack.config.js",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=resources/assets/js/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {},
   "dependencies": {
-    "admin-lte": "^2.4.2",
-    "axios": "^0.15.3",
-    "bootstrap": "^3.3.7",
-    "bootstrap-daterangepicker": "^2.1.30",
-    "bootstrap-material-design": "^0.5.10",
-    "bootstrap-sass": "^3.3.7",
-    "bootstrap-select": "^1.12.4",
-    "bootstrap-switch": "^3.3.4",
-    "chart.js": "^2.7.1",
-    "codemirror": "^5.33.0",
-    "components-jqueryui": "^1.12.1",
-    "cropper": "^2.1.0",
-    "cross-env": "^3.2.4",
-    "datatables.net": "1.10.15",
-    "datatables.net-bs": "1.10.15",
-    "datatables.net-dt": "1.10.15",
-    "datatables.net-responsive": "^2.2.1",
-    "datatables.net-responsive-bs": "^2.2.1",
-    "dropzone": "^5.3.0",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-    "font-awesome": "^4.7.0",
-    "fs": "0.0.1-security",
-    "fullcalendar": "^3.8.0",
+    "admin-lte": "^2.4",
+    "axios": "^0.17",
+    "babel-loader": "^7.1.2",
+    "bootstrap": "^3.3",
+    "bootstrap-daterangepicker": "^2.1",
+    "bootstrap-material-design": "^4.1",
+    "bootstrap-sass": "^3.3",
+    "bootstrap-select": "^1.12",
+    "bootstrap-switch": "^3.3",
+    "chart.js": "^2.7",
+    "codemirror": "^5.33",
+    "components-jqueryui": "^1.12",
+    "cropper": "^3.1",
+    "cross-env": "^5.1",
+    "css-loader": "^0.28.9",
+    "datatables.net": "^1.10",
+    "datatables.net-bs": "^1.10",
+    "datatables.net-dt": "^1.10",
+    "datatables.net-responsive": "^2.2",
+    "datatables.net-responsive-bs": "^2.2",
+    "dropzone": "^5.3",
+    "eonasdan-bootstrap-datetimepicker": "^4.17",
+    "file-loader": "^1.1.6",
+    "font-awesome": "^4.7",
+    "fs": "^0.0",
+    "fullcalendar": "^3.8",
     "icheck": "^1.0.2",
-    "ionicons": "^3.0.0",
-    "jquery": "^2.2.4",
-    "jquery-slimscroll": "^1.3.8",
-    "jquery-ui": "github:jquery/jquery-ui#1.12.1",
-    "jquery-ui-dist": "^1.12.1",
-    "jquery-validation": "^1.17.0",
+    "ionicons": "^3.0",
+    "jquery": "^3.3",
+    "jquery-slimscroll": "^1.3",
+    "jquery-ui": "^1.12",
+    "jquery-ui-dist": "^1.12",
+    "jquery-validation": "^1.17",
     "jstree": "^3.3.5",
-    "laravel-mix": "^0.12.1",
-    "lodash": "^4.17.4",
-    "material-icons": "^0.1.0",
-    "materialize-css": "^0.100.2",
-    "mustache": "^2.3.0",
-    "mz": "^2.6.0",
-    "nestable": "^0.2.0",
-    "normalize.css": "^7.0.0",
-    "pixeden-stroke-7-icon": "^1.2.3",
-    "readline": "^1.3.0",
-    "selectize": "^0.12.4",
-    "simple-line-icons": "^2.4.1",
-    "sortable": "^2.0.0",
-    "sortablejs": "^1.7.0",
-    "summernote": "^0.8.9",
-    "sweetalert": "^1.1.3",
-    "timeago": "^1.6.1",
+    "laravel-mix": "^2.0",
+    "lodash": "^4.17",
+    "material-icons": "^0",
+    "materialize-css": "^0.100",
+    "mustache": "^2.3",
+    "mz": "^2.6",
+    "nestable": "^0.2",
+    "node-sass": "^4.7",
+    "normalize.css": "^7.0",
+    "pixeden-stroke-7-icon": "^1.2",
+    "postcss-loader": "^2.0.10",
+    "readline": "^1.3",
+    "resolve-url-loader": "^2.2.1",
+    "selectize": "^0.12",
+    "simple-line-icons": "^2.4",
+    "sortable": "^2.0",
+    "sortablejs": "^1.7",
+    "style-loader": "^0.20.1",
+    "summernote": "^0.8",
+    "sweetalert": "^2.1.0",
+    "timeago": "^1.6",
     "toastr": "^2.1.4",
     "vue": "^2.5.13",
-    "waves": "^0.1.1"
+    "waves": "^0.1",
+    "webpack": "^3.10"
   }
 }
