--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
-        "barryvdh/laravel-debugbar": "~3.1"
+        "barryvdh/laravel-debugbar": "~3.1",
+        "symfony/thanks": "^1.0"
     },
     "autoload": {
         "classmap": [
@@ -41,23 +42,27 @@
         "installer-paths": {
             "packages/{$vendor}/{$name}": ["type:lavalite-package"],
             "public/themes": ["lavalite/theme"]
+        },
+        "laravel": {
+            "dont-discover": [
+            ]
         }
     },
     "scripts": {
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+        "post-create-project-cmd": [
+            "@php artisan key:generate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
