--- a/composer.json
+++ b/composer.json
@@ -5,33 +5,35 @@
     "license": "MIT",
     "type": "cms",
     "require": {
-        "php": ">=5.6.4",
-        "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
+        "php": ">=7.1.3",
+        "fideloper/proxy": "~4.0",
+        "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "lavalite/framework": "3.1.*",
         "lavalite/theme": "3.1.*",
+        "litecms/block": "3.0.*",
+        "litecms/contact": "3.0.*",
+        "litecms/page": "3.0.*",
         "litecms/block": "3.0.*",
         "litecms/contact": "3.0.*",
         "litecms/page": "3.0.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
+        "nunomaduro/collision": "~1.1",
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
-        "barryvdh/laravel-debugbar": "~3.1",
+        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "~7.0",
         "symfony/thanks": "^1.0"
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database/seeds",
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
-        },
-        "files": [
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
@@ -39,10 +41,6 @@
         }
     },
     "extra": {
-        "installer-paths": {
-            "packages/{$vendor}/{$name}": ["type:lavalite-package"],
-            "public/themes": ["lavalite/theme"]
-        },
         "laravel": {
             "dont-discover": [
             ]
@@ -64,5 +62,7 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
