Update for next release.

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,9 @@
 ._*
 /vendor
 /node_modules
-/public/uploads
 /public/themes
-/.idea
-/framework
+/packages
 Homestead.json
 Homestead.yaml
-
-composer.develop.json
-composer.develop.lock
 composer.lock
 package-lock.json
