--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
-        "lavalite/framework": "3.1.*",
-        "lavalite/theme": "3.1.*",
-        "litecms/block": "3.0.*",
-        "litecms/contact": "3.0.*",
-        "litecms/page": "3.0.*",
-        "litecms/block": "3.0.*",
-        "litecms/contact": "3.0.*",
-        "litecms/page": "3.0.*"
+        "lavalite/framework": "~4.0",
+        "lavalite/theme": "~4.0",
+        "litecms/block": "~4.0",
+        "litecms/contact": "~4.0",
+        "litecms/page": "~4.0",
+        "litepie/task": "~3.0",
+        "litepie/calendar": "~3.0",
+        "litepie/message": "~3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -41,6 +41,9 @@
         }
     },
     "extra": {
+        "installer-paths": {
+            "public/themes": ["lavalite/theme"]
+        },
         "laravel": {
             "dont-discover": [
             ]
