--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "nestable": "^0.2",
     "node-sass": "^4.7",
     "normalize.css": "^7.0",
-    "pixeden-stroke-7-icon": "^1.2",
+    "pixeden-stroke-7-icon": "^1.2.3",
     "postcss-loader": "^2.0.10",
     "readline": "^1.3",
     "resolve-url-loader": "^2.2.1",
@@ -65,6 +65,8 @@
     "style-loader": "^0.20.1",
     "summernote": "^0.8",
     "sweetalert": "^2.1.0",
+    "themify-icons": "^1.0.0",
+    "ti-icons": "^0.1.2",
     "timeago": "^1.6",
     "toastr": "^2.1.4",
     "vue": "^2.5.13",
