--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "license": "MIT",
     "type": "cms",
     "require": {
-        "php": ">=7.1.3",
-        "fideloper/proxy": "~4.0",
-        "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0",
+        "php": "^7.1.3",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "5.7.*",
+        "laravel/tinker": "^1.0",
         "lavalite/framework": "~4.0",
         "lavalite/theme": "~4.0",
         "litecms/block": "~4.0",
@@ -46,6 +46,16 @@
         },
         "laravel": {
             "dont-discover": [
+                "anahkiasen/former",
+                "fideloper/proxy",
+                "intervention/image",
+                "laravel/socialite",
+                "laravel/tinker",
+                "mcamara/laravel-localization",
+                "nunomaduro/collision",
+                "prettus/l5-repository",
+                "spatie/laravel-activitylog",
+                "spatie/laravel-backup"
             ]
         }
     },
