Update main files

--- a/.env.example
+++ b/.env.example
@@ -47,9 +47,20 @@ LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
 LINKEDIN_CALLBACK_URL="${APP_URL}/user/login/linkedin/callback"
 
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CALLBACK_URL="${APP_URL}/user/login/github/callback"
+
 PAYPAL_CLIENT_ID=
 PAYPAL_SECRET=
 PAYPAL_MODE=sandbox
 
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
+
+WHATSAPP_URL=
+WHATSAPP_VERSION=
+WHATSAPP_APITOKEN=
+WHATSAPP_APPID=
+WHATSAPP_INTEGRATIONID=
+
