--- a/composer.json
+++ b/composer.json
@@ -1,84 +1,70 @@
 {
-    "name": "lavalite/cms",
-    "description": "Lavalite - The Laravel CMS.",
-    "keywords": [
-        "framework",
-        "laravel",
-        "lavalite",
-        "cms"
-    ],
-    "license": "MIT",
-    "type": "cms",
-    "require": {
-        "php": "^7.2.5|^8.0",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
-        "laravel/framework": "^7.0",
-        "laravel/sanctum": "^2.8",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^2.5",
-
-        "lavalite/framework": "^7.0",
-        "litecms/default": "^7.0",
-
-        "litecms/block": "^7.0",
-        "litecms/contact": "^7.0",
-        "litecms/page": "^7.0"
-    },
-    "require-dev": {
-        "facade/ignition": "^2.0",
-        "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.3",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": [
-                "anahkiasen/former",
-                "fideloper/proxy",
-                "intervention/image",
-                "laravel/socialite",
-                "laravel/tinker",
-                "mcamara/laravel-localization",
-                "nunomaduro/collision",
-                "prettus/l5-repository",
-                "spatie/laravel-activitylog"
-            ]
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
+  "name": "lavalite/cms",
+  "description": "Lavalite - The Laravel CMS.",
+  "keywords": [
+    "framework",
+    "laravel",
+    "lavalite",
+    "CMS",
+    "CRM",
+    "ERP"
+  ],
+  "license": "MIT",
+  "type": "cms",
+  "require": {
+    "php": "^7.3|^8.0",
+    "fruitcake/laravel-cors": "^2.0",
+    "guzzlehttp/guzzle": "^7.0.1",
+    "laravel/framework": "^8.54",
+    "laravel/sanctum": "^2.11",
+    "laravel/tinker": "^2.5",
+    "laravel/ui": "^2.1"
+  },
+  "require-dev": {
+    "facade/ignition": "^2.5",
+    "fakerphp/faker": "^1.9.1",
+    "laravel/sail": "^1.0.1",
+    "mockery/mockery": "^1.4.2",
+    "nunomaduro/collision": "^5.0",
+    "phpunit/phpunit": "^9.3.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
+    ],
+    "post-update-cmd": [
+      "@php artisan vendor:publish --tag=laravel-assets --ansi"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate --ansi"
+    ]
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
+    }
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
