--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,20 +1,13 @@
-preset: recommended
-
-risky: false
-
-enabled:
-
-disabled:
-  - align_double_arrow
-
-finder:
-  exclude:
-    - "tests"
-    - "storage"
-    - "resources"
-  name:
-    - "*.php"
-  not-name:
-    - "*Stub.php"
-  depth:
-    - "< 3"
+php:
+  preset: laravel
+  version: 8
+  disabled:
+    - no_unused_imports
+  finder:
+    not-name:
+      - index.php
+js:
+  finder:
+    not-name:
+      - webpack.mix.js
+css: true
